--- a/public/index.html
+++ b/public/index.html
@@ -67,7 +67,7 @@
         <div class="popUpMessage"></div>
         <div class="popUpButtonContainer">
             <button class="popUpButton"></button>
-            <button class="popUpButton" >Hello</button>
+            <button class="popUpButton" style="display:none;"></button>
         </div>
     </div>
 
