Fixes #6 #7: green active user and responsiveness

--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,11 @@
     <link rel="stylesheet" href="styles/game.css">
 </head>
 <body>
-    <div class="titleHeader">TicTacToe</div>
+    <div class="titleHeader">
+        <i class="fa-solid fa-xmark" style="color: #185046;"></i>
+        TicTacToe
+        <i class="fa-solid fa-o" style="color: #185046;"></i>
+    </div>
     <div id="mainContent" style="display: none;">
         <!------- left sidebar - player1 ------>
         
