Fixes #2, Fixes #3, Fixes #4, Fixes #5; Rematch

--- a/public/index.html
+++ b/public/index.html
@@ -71,7 +71,7 @@
         <div class="popUpMessage"></div>
         <div class="popUpButtonContainer">
             <button class="popUpButton"></button>
-            <button class="popUpButton" style="display:none;"></button>
+            <button class="popUpButton"></button>
         </div>
     </div>
 
